# ProcessAudioTap

./: .gitignore  404.html  CLAUDE.md  MANIFEST.in  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml  test_capture.py  test_native_converter.py  verify_conversion.py
.claude/: settings.local.json
.claude/commands/: gcomment.md
.github/: release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml  performance.yml  type_hints_async.yml
.github/workflows/: build-wheels.yml  publish-pypi.yml  release-testpypi.yml  test.yml
api/processaudiotap/: index.html
api/streamconfig/: index.html
archive/apple-silicon-investigation-20251120/: AMFI_DISABLE_INSTRUCTIONS.md  AMFI_DISABLE_RECOVERY.md  FRESH_INSTALL_TEST_RESULT.md  IMPLEMENTATION_SUMMARY.md  MACOS_DEVELOPMENT_STATUS.md  MACOS_IMPLEMENTATION_FINAL.md  MACOS_TCC_INVESTIGATION.md  MICROPHONE_PERMISSION_GUIDE.md  README.md  SESSION_SUMMARY.md  TCC_IMPLEMENTATION.md  _macos_native.m  debug_ioproc_issue.md  quick_test.sh  (+8 more)
benchmarks/: benchmark_converter_optimizations.py  benchmark_native_converter.py  profile_converter.py
changelog/: index.html
docs/: changelog.md  index.md  macos_core_audio_research.md  macos_include_exclude_pids_implementation.md
examples/: README.md  macos_advanced.py  macos_latency_benchmark.py  macos_native_benchmark.py  macos_screencapture_test.py  record_proc_to_wav.py  windows_basic.py
macos_core_audio_research/: index.html
macos_include_exclude_pids_implementation/: index.html
search/: search_index.json
(+87 files in other folders)
