[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "processaudiotap"
version = "0.1.0"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "types-setuptools"
]

[tool.setuptools.packages.find]
where = ["src"]
